--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PORT=
+PORT=3000
 MONGODB_USER=mazleon777_db_user
 MONGODB_PASSWORD=googlegmail
 MONGODB_URL=mongodb+srv://mazleon777_db_user:googlegmail@cluster0.v2xo43j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
