--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=3000
 MONGODB_USER=mazleon777_db_user
 MONGODB_PASSWORD=googlegmail
-MONGODB_URL=mongodb+srv://mazleon777_db_user:googlegmail@cluster0.v2xo43j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL=cluster0.v2xo43j.mongodb.net
 MONGODB_DB=contacts
