--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ MONGODB_USER=mazleon777_db_user
 MONGODB_PASSWORD=googlegmail
 MONGODB_URL=cluster0.v2xo43j.mongodb.net
 MONGODB_DB=contacts
+JWT_ACCESS_SECRET=access_secret_key_12345_abcdef_98765
+JWT_REFRESH_SECRET=refresh_secret_key_67890_ghijkl_54321
+JWT_ACCESS_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=30d
